--- a/.env
+++ b/.env
@@ -186,3 +186,5 @@ APP_SESSION_DURATION=900
 ##################################################
 RABBITMQ_USERNAME=common-gateway
 RABBITMQ_PASSWORD=changeme!
+
+PUBLICCODE=https://raw.githubusercontent.com/kevindh89/petstore/main/publiccode.yaml
